--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,19 +1,25 @@
-@import 'abstracts/variables';
+@import
+    'abstracts/variables';
 
-@import '~reset-css/sass/reset';
+@import
+    '~reset-css/sass/reset';
 
-@import 'base/base';
+@import
+    'base/base';
 
-@import 'layout/articles',
-'layout/intro',
-'layout/main',
-'layout/navigation',
-'layout/sidebar',
-'layout/values';
+@import
+    'layout/articles',
+    'layout/intro',
+    'layout/main',
+    'layout/navigation',
+    'layout/sidebar',
+    'layout/values';
 
-@import 'components/article',
-'components/header',
-'components/logo',
-'components/value';
+@import
+    'components/article',
+    'components/header',
+    'components/logo',
+    'components/value';
 
-@import 'shame';
+@import
+    'shame';
